--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -27,6 +27,20 @@ https://www.sciencedirect.com/science/article/pii/S0272735809001597?via%3Dihub},
    year = {2010},
 }
 
+@article{Aldao2013,
+   author = {Aldao, A.},
+   title = {The Future of Emotion Regulation Research: Capturing Context},
+   journal = {Perspectives on Psychological Science},
+   volume = {8},
+   number = {2},
+   pages = {155-172},
+   ISSN = {1745-6916},
+   DOI = {10.1177/1745691612459518},
+   url = {<Go to ISI>://WOS:000318574300005},
+   year = {2013},
+   type = {Journal Article}
+}
+
 @article{Aldao2015,
    author = {Aldao, A. and Sheppes, G. and Gross, J. J.},
    title = {Emotion regulation flexibility},
