--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -27,12 +27,12 @@ options(papaja.na_string = "")
 
 ## 3.1 Participants and descriptive statistics
 
-Data collection took place between 16th of August 2022 and the 3rd of February 2023.
+Data collection took place between the 16th of August 2022 and the 3rd of February 2023.
 A total of $N=`r sum(data_survey[,"lay_beliefs_complete"] == 2)`$ participants completed the online survey and were invited to participate in the two lab sessions.
-Of these, $N=`r sum(data_survey[,"files_coged_complete"] == 2)`$ participated in the first laboratory session [@ZernaScheffel2022] and $N=`r sum(data_survey[,"followup_ered_complete"] == 2)`$ completed the second laboratory session.
-Of these, $n=1$ person had to be excluded from analyses because they did not follow the instructions.
-The final sample consisted of $N=`r sum(data_survey[,"followup_ered_complete"] == 2)-1`$ participants (`r length(which(data_descr[which(data_descr[,"ID"] != dplyr::lag(data_descr[,"ID"])),"gender"] == 2))` female; age: $M\text{ }\pm\text{ }SD =`r papaja::printnum(mean(data_descr[,"age"], na.rm = TRUE), digits = 1, gt1 = TRUE)`\text{ }\pm\text{ }`r papaja::printnum(sd(data_descr[,"age"], na.rm = TRUE), digits = 1, gt1 = TRUE)`$ years old), which is `r format(round((sum(data_survey[,"followup_ered_complete"] == 2)-1)/85, digits = 1), nsmall = 1)` times more than what the highest sample size calculation required.
-Please note that sample size for individual calculations may be smaller due to failure of EMG recording ($n=1$) and failure to record utility ratings ($n=`r sum(is.na(data_ER[,"utility"][data_ER[,"block"] == "3_distraction"]))`$).
+The first session was attended by $N=`r sum(data_survey[,"files_coged_complete"] == 2)`$ participants [@ZernaScheffel2022], and $N=`r sum(data_survey[,"followup_ered_complete"] == 2)`$ participants also completed the second session.
+We excluded the data of $n=1$ person from the present analyses because they stated that they did not follow the instructions.
+Therefore, the final sample consisted of $N=`r sum(data_survey[,"followup_ered_complete"] == 2)-1`$ participants (`r length(which(data_descr[which(data_descr[,"ID"] != dplyr::lag(data_descr[,"ID"])),"gender"] == 2))` female; age: $M\text{ }\pm\text{ }SD =`r papaja::printnum(mean(data_descr[,"age"], na.rm = TRUE), digits = 1, gt1 = TRUE)`\text{ }\pm\text{ }`r papaja::printnum(sd(data_descr[,"age"], na.rm = TRUE), digits = 1, gt1 = TRUE)`$ years old), which is `r format(round((sum(data_survey[,"followup_ered_complete"] == 2)-1)/85, digits = 1), nsmall = 1)` times more than what the highest sample size calculation required.
+Please note that the sample size for a few analyses may be smaller due to failure of EMG recording ($n=1$) and failure to record utility ratings ($n=`r sum(is.na(data_ER[,"utility"][data_ER[,"block"] == "3_distraction"]))`$).
 
 ## 3.2. Confirmatory analyses
 
